--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
 <body>
-<h1>Hello World </h1>
-<p>I'm hosted with Github Pages.</p>
+
+  <div id="" class="container">
+      <h1>My First Bootstrap Page</h1>
+      <p>This is some text.</p>
+  </div id="menu-bar" class="menu-bar">
+      <button onclick="showMenu()" class="dropdown">Dropdown</button>
+      <div id="myDropDown" class="dropdown-content">
+          <a href="#">Link1</a>
+          <a href="#">Link2</a>
+      </div>
+  </div>
+
+  <div id="" class="">
+
+  </div>
+
 </body>
 </html>
