--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div id="" class="container">
-      <h1>My First Bootstrap Page</h1>
+      <h1>Geoffrey Li</h1>
       <p>This is some text.</p>
   </div id="menu-bar" class="menu-bar">
       <button onclick="showMenu()" class="dropdown">Dropdown</button>
