--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </div id="menu-bar" class="menu-bar">
       <button onclick="showMenu()" class="dropdown">Dropdown</button>
       <div id="myDropDown" class="dropdown-content">
-          <a href="#">Link1</a>
-          <a href="#">Link2</a>
+          <a href="#home">Link1</a>
+          <a href="#about">Link2</a>
       </div>
   </div>
 
