--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>Geoffrey Li</h1>
       <p>This is some text.</p>
   </div id="menu-bar" class="menu-bar">
-      <button onclick="showMenu()" class="dropdown">Dropdown</button>
+      <button onclick="showMenu()" class="dropbtn">Dropdown</button>
       <div id="myDropDown" class="dropdown-content">
           <a href="#home">Link1</a>
           <a href="#about">Link2</a>
