--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sample WebPage</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="geoffrey.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="dosomething.js"></script>
-</head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<body>
+  <!-- Add a container for the side nav bar -->
 
-  <div id="" class="container">
-      <h1>Geoffrey Li</h1>
-      <p>This is some text.</p>
-  </div id="menu-bar" class="menu-bar">
-      <button onclick="showMenu()" class="dropbtn">Dropdown</button>
-      <div id="myDropDown" class="dropdown-content">
-          <a href="#home">Link1</a>
-          <a href="#about">Link2</a>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Geoffrey</a>
       </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li class="dropdown"><a class="dropdown-toogle" data-toggle="dropdown" href="#">Projects
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Web</a></li>
+            <li><a href="#">Games</a></li>
+          </ul>
+        </li>
+        <li><a href="#">About</a></li>
+    </div>
+  </nav>
+
+  <div class="container">
+    <h1>My First Bootstrap Page</h1>
+    <p>This is my first webpage</p>
+    <p>My name is Geoffrey!!! Nice to meet you</p>
   </div>
-
-  <div id="" class="">
-
-  </div>
-
-</body>
-</html>
+</head>
