--- a/about.html
+++ b/about.html
@@ -30,10 +30,11 @@
 </head>
 
 <body>
-  <div class="container">
-    <h1>My First Bootstrap Page</h1>
+  <!--  Template for about page -->
+  <div class="container-fluid text-center">
+    <h1>ABOUT ME</h1>
+    <img src="img/coverPhotoGeoffrey.jpg">
     <p>This is my first webpage</p>
-    <p>My name is Geoffrey!!! Nice to meet you</p>
+    <p>Page still under construction!! </p>
   </div>
-
 </body>
