--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <!--  Template for about page -->
   <div class="container-fluid text-center">
     <h1>ABOUT ME</h1>
-    <img src="img/coverPhotoGeoffrey.jpg" class="img-circle">
+    <img src="img/coverPhotoGeoffrey.JPG" class="img-circle">
     <p>This is my first webpage</p>
     <p>Page still under construction!! </p>
   </div>
