--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="#">Geoffrey</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class"active"><a href="index.html">About</a></li>
         <li class="dropdown"><a class="dropdown-toogle" data-toggle="dropdown" href="#">Projects
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -24,16 +24,58 @@
             <li><a href="#">Games</a></li>
           </ul>
         </li>
-        <li><a href="about.html">About</a></li>
+
     </div>
   </nav>
 </head>
 
 <body>
-  <div class="container">
-    <h1>My First Bootstrap Page</h1>
+  <!--  Template for about page -->
+  <div id="aboutMe" class="container-fluid text-center">
+    <h1>ABOUT ME</h1>
+    <img src="img/coverPhotoGeoffrey.JPG" class="img-circle">
     <p>This is my first webpage</p>
-    <p>My name is Geoffrey!!! Nice to meet you</p>
+    <p>Page still under construction!! </p>
   </div>
 
+  <!-- Self Description -->
+  <div id="selfDescription" class="container-fluid text-center">
+    <h3>Who Am I?</h3>
+    <p>Hi!  My name is Geoffrey.  I am a recent graduate of computer engineering program at UofT.  I have worked as an creator of automated testing suites for several companies.  I am also a budding
+    web developer, starting to experiment creating simple and intuitive static and dynamic websites.</p>
+  </div>
+
+  <!-- Companies that I have worked at -->
+  <div id="workedAtCompanies" class="container-fluid text-center">
+    <h3></h3>
+    <div class="row">
+      <div class="col-sm-4">
+        <p>Paymentus</p>
+        <img src="img/paymentusLogo.jpeg">
+      </div>
+      <div class="col-sm-4">
+        <p>Bluecat Networks</p>
+        <img src="img/blueCatLogo.png">
+      </div>
+      <div class="col-sm-4">
+        <p>Celestica</p>
+        <img src="">
+      </div>
+    </div>
+  </div>
+
+  <div id="contactMe" class="container-fluid text-center">
+    <p>You can contact me through the following mediums</p>
+
+    <table align="center">
+      <tr>
+        <td><a href="https://www.facebook.com/geoffrey.li.7">Find me on Facebook!</a></td>
+      </tr>
+      <tr>
+        <td><a href="#">Or contact me on linkedIn!</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/jeff4uraree">Also checkout my Github!</a></td>
+      </tr>
+  </div>
 </body>
