Updated paymentus logo with higher res image

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3>Paymentus</h3>
         <p>At Paymentus, I helped design an automated testing suite to follow best practices such as the use of page object models.  I designed testcases for testing non browser aspects of paymentus services such as Interactive voice reponse (IVR solutions) and
         testing rest api functionality. </p>
-        <a href="https://www.paymentus.com/"><img src="img/paymentusLogo.jpeg"></a>
+        <a href="https://www.paymentus.com/"><img src="img/paymentusLogo.jpg"></a>
       </div>
       <div class="col-sm-4">
         <h3>Bluecat Networks</h3>
