Updated title name to something more fitting

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Geoffrey's Personal Github Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -106,7 +106,7 @@
         <td><a href="https://www.facebook.com/geoffrey.li.7">Find me on Facebook!</a></td>
       </tr>
       <tr>
-        <td><a href="#">Or contact me on linkedIn!</a></td>
+        <td><a href="https://ca.linkedin.com/in/geoffrey-li-1085b758">Or contact me on linkedIn!</a></td>
       </tr>
       <tr>
         <td><a href="https://github.com/jeff4uraree">Also checkout my Github!</a></td>
