Updated self and company descriptions

--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
     padding-top: 40px;
     padding-bottom: 40px;
   }
+
+  .job-description {
+    font-size: 30px;
+  }
+
+  #selfDescription {
+    font-size: 20px;
+  }
+
+  .section-label {
+    font-size: 30px;
+  }
+
+  .description-content {
+    margin: 2cm 4cm 3cm 4cm;
+  }
   </style>
 
   <!-- Add a container for the side nav bar -->
@@ -69,8 +85,8 @@
 
   <!-- Self Description -->
   <div id="selfDescription" class="container-fluid bg-2 text-center">
-    <h3>Who Am I?</h3>
-    <p>Hi!  My name is Geoffrey Li.  I am a recent graduate of computer engineering program at UofT.  I have worked as an creator of automated testing suites for several companies.  I am also a budding
+    <h3 class="section-label">Who Am I?</h3>
+    <p class="description-content">Hi!  My name is Geoffrey Li.  I am a profession software engineer with a background focused in automation testing.  I have worked as an creator of automated testing suites for several companies.  I am also a budding
     web developer, starting to experiment creating simple and intuitive static and dynamic websites.</p>
   </div>
 
@@ -79,19 +95,19 @@
     <h3></h3>
     <div class="row">
       <div class="col-sm-4">
-        <h3>Paymentus</h3>
+        <h3 class="job-description">QA Engineer</h3>
         <p>At Paymentus, I helped design an automated testing suite to follow best practices such as the use of page object models.  I designed testcases for testing non browser aspects of paymentus services such as Interactive voice reponse (IVR solutions) and
         testing rest api functionality. </p>
         <a href="https://www.paymentus.com/"><img src="img/paymentusLogo.jpg"></a>
       </div>
       <div class="col-sm-4">
-        <h3>Bluecat Networks</h3>
-        <p>During my time at Bluecat, I worked as a Test Automation Engineer with Agile Scrum Teams to design, develop, and maintain the automated testing suite for Bluecats' IP Address Manager(IPAM) web tool using the web browser automation tool Selenium Webdriver.
+        <h3 class="job-description">Automation Software Developer</h3>
+        <p>During my time at Bluecat, I worked with Agile Scrum Teams to design, develop, and maintain the automated testing suite for Bluecats' IP Address Manager(IPAM) web tool using the web browser automation tool Selenium Webdriver.
         I also coordinated with developers and QA engineers to identify, report and fix bugs, defects and other issues. </p>
         <a href="https://www.bluecatnetworks.com/"><img src="img/blueCatLogo.png"></a>
       </div>
       <div class="col-sm-4">
-        <h3>Celestica</h3>
+        <h3 class="job-description">Corporate Component Engineer</h3>
         <p>I worked at Celestica during my Professional Experience Year (PEY) term.  I created macros in visual basic to automate elements of electrical component analysis and report generation. </p>
         <a href="https://www.celestica.com/home"><img src="img/celesticaLogo.jpg"></a>
       </div>
